# ml-studio

./: .gitignore  README.md
ml-studio/: QUICKSTART.md  README.md  setup.sh
ml-studio/backend/: .env.example  db.py  diagnostics.py  eda.py  main.py  mlflow_tracking.py  mlflow_ui_cli.py  predict.py  pyproject.toml  requirements.txt  train.py  transforms.py
ml-studio/data/: sample_wine.csv
ml-studio/frontend/: index.html  package-lock.json  package.json
ml-studio/frontend/src/: App.tsx  api.ts  deriveTemplates.ts  edaTransformRecommendations.ts  edaTransformWarnings.tsx  transformTypes.ts  transformWarnings.tsx  vite-env.d.ts
ml-studio/frontend/src/components/: ChartExportButtons.tsx  DeriveTemplateQueue.tsx  InfoDrawer.tsx  LoadingState.tsx  PageShell.tsx  RenameEditor.tsx  SidebarWorkflowNav.tsx  SplitConfigPanel.tsx  TransformTypePicker.tsx  WorkflowNextBar.tsx
ml-studio/frontend/src/lib/: chartExport.ts  fitDiagnostics.ts  runLabel.ts
ml-studio/frontend/src/pages/: Diagnostics.tsx  EDA.tsx  Experiments.tsx  HoldoutSplit.tsx  Importances.tsx  PipelineExport.tsx  Predict.tsx  Train.tsx  Transforms.tsx  Upload.tsx
wine-ml-app/: README.md
wine-ml-app/backend/: predict.py  pyproject.toml  train.py  tune.py  url_safety.py
wine-ml-app/frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
wine-ml-app/frontend/src/: index.css  main.tsx  transformTypes.ts
wine-ml-app/frontend/src/components/: HyperparamPanel.tsx
wine-ml-app/frontend/src/pages/: Importances.tsx  Predict.tsx  Train.tsx  Transforms.tsx  Upload.tsx
(+6 files in other folders)
